# prism-kb

./: CLAUDE.md  COGLOOP.md  Maintenance.md  PRISM-HOLO.md  PRISM-KB.md  README.md  RESULTS_LEVERS.md  TRAINING.md  pyproject.toml
paper/: PRISM-Holo_Paper.md
prism/: capture.py  cogloop.py  cogmemory.py  config.py  curriculum.py  data_scale.py  encoder.py  eval_holo.py  experts.py  generate.py  holo.py  holo_data.py  holo_inference.py  holo_loss.py  holo_pipeline_demo.py  incontext.py  ingest.py  kb.py  memory.py  model.py  modular.py  pcs.py  reflect.py  router.py  run_holo_train.py  run_scale.py  train_encoder.py  train_retrieval.py  train_scale.py  two_axes_demo.py
tasks/: reasoning.py  retrieval.py
tests/: test_capture.py  test_cogloop.py  test_cogmemory.py  test_curriculum.py  test_holo.py  test_holo_head.py  test_holo_inference.py  test_kb.py  test_modular.py  test_pcs.py  test_reasoning.py  test_reflect.py  test_router.py
