[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "PRISM — Polymorphic Recurrent Intelligence with Shared Memory. A novel sub-quadratic MoE architecture with heterogeneous neural/memory/symbolic experts over a shared differentiable memory bus."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ZCodeProject" }]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pyyaml>=6"]
scale = [
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.30",
    "wandb>=0.16",
]

[project.scripts]
prism-train = "train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*", "tasks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
